Fix select option overflowing in phones

--- a/style.css
+++ b/style.css
@@ -27,10 +27,10 @@ form button {
     cursor: pointer;
     transition: all 0.3s ease   ;
 }
-@media only screen and (max-width: 768px) {
+@media only screen and (max-width: 420px) {
     form input {
-        width: 15rem;
-    }
+        width: 7rem;
+    } 
 }
 form button:hover {
     background:blueviolet;
